# Bagels

./: SKILL.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-01b-PLAN.md  01-01b-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-FMT04-DECISION.md  01-RESEARCH.md  01-VALIDATION.md  01-foundation-VERIFICATION.md
.planning/phases/02-cli-query-layer/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02a-PLAN.md  02-02a-SUMMARY.md  02-02b-PLAN.md  02-02b-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-automation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-verification/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-requirement-reduction-remove-buggy-git-and-yaml-loader/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  (+3 more)
docs/: FEATURE_ROADMAP.md
src/bagels/: __main__.py  app.py  config.py  locations.py
tests/: conftest.py  test_git_config.py
tests/automation/: test_hooks.py  test_startup.py
tests/cli/: __init__.py  conftest.py  conftest.py.broken  test_accounts.py  test_categories.py  test_crud.py  test_git.py  test_llm.py  test_main.py  test_output_formats.py  test_output_formatters.py  test_records.py  test_schema.py  test_spending.py  test_summary.py  test_trends.py
tests/export/: test_accounts.py  test_categories.py  test_persons.py  test_records.py  test_slug_generator.py  test_templates.py
tests/git/: conftest.py  test_operations.py
tests/import/: test_import.py  test_validator.py
tests/integration/: conftest.py  test_auto_export_triggers.py  test_bidirectional_sync.py  test_cli_output_formats.py  test_custom_root_session_rebind.py  test_git_conflict.py  test_llm_context_completeness.py
tests/managers/: test_utils.py
(+80 files in other folders)
