[project]
name = "Bagels"
version = "0.3.12"
authors = [
    { name = "Jax", email = "enhancedjax@gmail.com" }
]
description = "Powerful terminal expense tracker."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["python", "cli", "expense-tracker", "python3", "UV", "ssh", "textual", "terminal", "tui"]
dependencies = [
    "aiohappyeyeballs>=2.0,<3.0",
    "aiohttp-jinja2>=1.0,<2.0",
    "aiohttp>=3.0,<4.0",
    "aiosignal>=1.0,<2.0",
    "annotated-types>=0.0,<1.0",
    "attrs>=24.0,<25.0",
    "blinker>=1.0,<2.0",
    "click-default-group>=1.2,<2.0",
    "click>=8.0,<9.0",
    "frozenlist>=1.0,<2.0",
    "idna>=3.0,<4.0",
    "itsdangerous>=2.0,<3.0",
    "linkify-it-py>=2.0,<3.0",
    "markdown-it-py>=3.0,<4.0",
    "markupsafe>=3.0,<4.0",
    "mdit-py-plugins>=0.4,<1.0",
    "mdurl>=0.1,<1.0",
    "msgpack>=1.0,<2.0",
    "multidict>=6.0,<7.0",
    "numpy>=2.0,<3.0",
    "packaging>=23.0,<24.0",
    "platformdirs>=4.0,<5.0",
    "plotext>=5.0,<6.0",
    "propcache>=0.2,<1.0",
    "pydantic-core>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pygments>=2.0,<3.0",
    "python-dateutil>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.0,<3.0",
    "rich>=13.0,<14.0",
    "sqlalchemy>=2.0,<3.0",
    "textual>=1.0,<2.0",
    "tomli>=2.0,<3.0",
    "typing-extensions>=4.0,<5.0",
    "uc-micro-py>=1.0,<2.0",
    "werkzeug>=3.0,<4.0",
    "xdg-base-dirs>=6.0,<7.0",
    "yarl>=1.0,<2.0",
    "gitpython>=3.1,<4.0",
]

[project.urls]
Homepage = "https://github.com/EnhancedJax/Bagels"
Repository = "https://github.com/EnhancedJax/Bagels"
Issues = "https://github.com/EnhancedJax/Bagels/issues"
Documentation = "https://github.com/EnhancedJax/Bagels/blob/main/README.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bagels = "bagels.__main__:cli"

[tool.uv]
dev-dependencies = [
    "textual-dev==1.6.1",
    "pytest>=8.3.1",
    "jinja2>=3.1.4",
    "syrupy>=4.6.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pytest-textual-snapshot==1.0.0",
    "time-machine==2.16.0",
    "ruff>=0.9.1",
    "pre-commit>=4.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bagels"]

[tool.pytest.ini_options]
markers = [
    "serial",  # used to indicate tests must not run in parallel
]

[tool.coverage.run]
relative_files = true

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]
exclude = ["**/tests/**"]
